Added another paddle and score of each player and some css to make it make it more interesting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <h1>Welcome to the ping pong game</h1>
     <div id="ping-pong-table">
 
+        <div>
+            <div id="userscore">0</div>
+            <div id="aiscore">0</div>
+        </div>
+        
+        <div class="line">
+
+        </div>
         <div id="paddle">
+
+        </div>
+        <div id="aipaddle">
 
         </div>
 
